[package]
name = "tedge_sm_lib"
version = "0.2.2"
authors = ["diw"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.2"

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.9.0"
log = "0.4"
structopt = "0.3"
tokio = { version = "1.8", features = ["rt"] }
